[gd_scene load_steps=6 format=2]

[ext_resource path="res://EnemyTurtle/left_turtle.tres" type="Texture" id=1]
[ext_resource path="res://EnemyTurtle/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 16.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 4.1875 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 137, 31 )

[node name="TurtleEnemy" type="KinematicBody2D"]
position = Vector2( 352, 384 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0, -1 )
rotation = 6.28319
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true

[node name="DetectStomp" type="Area2D" parent="."]
position = Vector2( 0, -13 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectStomp"]
modulate = Color( 0.0470588, 0.0862745, 0.427451, 1 )
self_modulate = Color( 0.027451, 0.105882, 0.513726, 1 )
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( 1, 1 )
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectStomp" to="." method="_on_DetectStomp_body_entered"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
